
The following clm60 compset aliases were actually returning long names with CLM50 physics:

```
   ISSP245Clm60BgcCropCrujra : SSP245_DATM%CRUJRA2024_CLM50%BGC-CROP_SICE_SOCN_MOSART_SGLC_SWAV
   ISSP370Clm60BgcCropCrujra : SSP370_DATM%CRUJRA2024_CLM50%BGC-CROP_SICE_SOCN_MOSART_SGLC_SWAV
   ISSP585Clm60BgcCropCrujra : SSP585_DATM%CRUJRA2024_CLM50%BGC-CROP_SICE_SOCN_MOSART_SGLC_SWAV
```

This tag fixes them. It also adds a GitHub workflow to prevent this from happening again, at least for clm6 vs. clm5.


Significant changes to scientifically-supported configurations
--------------------------------------------------------------

Does this tag change answers significantly for any of the following physics configurations?
(Details of any changes will be given in the "Answer changes" section below.)

    [Put an [X] in the box for any configuration with significant answer changes.]

[X] clm6_0

[ ] clm5_0

[ ] ctsm5_0-nwp

[ ] clm4_5


Bugs fixed
----------

List of CTSM issues fixed (include CTSM Issue # and description):
- [Issue #3244: ISSP CLM60 Crujra compset aliases have longnames that use CLM50, not CLM60](https://github.com/ESCOMP/CTSM/issues/3244)
- [Issue #3254: aux_clm has no Clm60 ISSP tests](https://github.com/ESCOMP/CTSM/issues/3254)


Notes of particular relevance for developers:
---------------------------------------------

Changes to tests or testing:
- Three ISSP tests in aux_clm changed from Clm50 to their Clm60 equivalents.
- Other ISSP Clm50 tests are untouched.


Testing summary:
----------------

  regular tests (aux_clm: https://github.com/ESCOMP/CTSM/wiki/System-Testing-Guide#pre-merge-system-testing):

    derecho ----- OK
    izumi ------- OK


Answer changes
--------------

Changes answers relative to baseline:

  [ If a tag changes answers relative to baseline comparison the
    following should be filled in (otherwise remove this section).
    And always remove these three lines and parts that don't apply. ]
