@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 set -e
 
-# Check that clm6* compset aliases return CLM5* longnames
+# Check that clm6* compset aliases return CLM6* longnames
 
 # Change to top level of clone
 cd "$(git rev-parse --show-toplevel)"
@@ -13,10 +13,11 @@ cime/scripts/query_config --compsets 1>/dev/null
 OLD_IFS=$IFS
 IFS='\n'
 set +e
-bad_compsets="$(cime/scripts/query_config --compsets | sort | uniq | grep Clm6 | grep CLM5)"
+# Relies on case sensitivity here: Alias should have Clm6 and longname should have CLM6
+bad_compsets="$(cime/scripts/query_config --compsets | sort | uniq | grep Clm6 | grep -v CLM6)"
 set -e
 if [[ "${bad_compsets}" != "" ]]; then
-    echo "One or more compsets with Clm6 alias but CLM5 longname:" >&2
+    echo "One or more compsets with Clm6 alias but not CLM6 longname:" >&2
     echo $bad_compsets  >&2
     exit 1
 fi
